--- a/web/view/css/style.css
+++ b/web/view/css/style.css
@@ -433,6 +433,10 @@ body{
     .header__logo-img {
         max-width: 100%;
     }
+       .header__cart{
+        padding-left: 90%;
+    }
+
 }
 
 
